--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,33 +1,35 @@
+@import "@flaticon/flaticon-uicons/css/all/all";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+@layer base {
+    :root {
+        --primary: 144 100% 43%;
+        --background: 220 3% 91%;
+        --background-foreground: 0 0% 100%;
+        --text: 0 0% 11%;
+    }
+}
+/*En :root Creo las variables de estilos.*/
+
+@layer base {
+    body {
+        @apply bg-background text-text;
+    }
+
+    i {
+        @apply mt-1;
+    }
+
+    ::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+h2,h3{
+    font-weight: bold;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
